# nvcs

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  testing.yml
examples/: example.ipynb
notebooks/: example.ipynb
nvc/: __init__.py  color.py  color_scheme.json  structure.py
src/nvc/: __init__.py  color.py  structure.py
src/nvcs/: structure.py
tests/: conftest.py  test_viewer.py
